--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -2,7 +2,7 @@
 
 :root {
   --main-family: 'Archivo Black', sans-serif;
-  --color-bg: linear-gradient(180deg, #FFFFFF 0%, #AEC6DC 100%);
+  --color-bg: linear-gradient(180deg, #faf7dd 0%, #fff6c5 100%);
 
   /* Controls the blob blur gradient colors within the main tag's svg */
   --top-right-blur-1: #fcf2b7;
@@ -28,14 +28,14 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
-}
-
-.header {
+  height: 95vh;
   text-align: center;
 }
 
-.header h1 {
+h1 {
+  font-family: var(--main-family);
   padding-top: 5%;
   margin: 0;
 }
