Update icon, colors, font

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../components/Layout.astro";
 
 <Layout title="Bar Brands">
   <main>
-    <svg
+    <!-- <svg
       id="background"
       width="1728"
       height="1235"
@@ -72,9 +72,9 @@ import Layout from "../components/Layout.astro";
             stop-color="var(--top-right-blur-2)"></stop></linearGradient
         ></defs
       ></svg
-    >
+    > -->
     <div id="content">
-      <h1>BAR BRANDS</h1>
+      <h1>Bar Brands</h1>
     </div>
   </main>
 </Layout>
