--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props as Props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title}</title>
   </head>
   <body>
@@ -26,8 +26,8 @@ const { title } = Astro.props as Props;
     --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
     --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
     --font-size-xl: clamp(2.44rem, 2.38vw + 3.85rem, 6.75rem);
-    --color-text: hsl(12, 5%, 4%);
-    --color-bg: hsl(10, 21%, 95%);
+    --color-text: hsl(0, 0%, 0%);
+    /* --color-bg: hsl(10, 21%, 95%); */
   }
   html {
     font-family: system-ui, sans-serif;
