--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Della+Respira&display=swap');
 
 :root {
-  --main-family: 'Archivo Black', sans-serif;
-  --color-bg: linear-gradient(180deg, #faf7dd 0%, #fff6c5 100%);
+  /* --main-family: 'Archivo Black', sans-serif; */
+  /* --main-family: 'Archivo Black', sans-serif; */
+  --main-family: 'Della Respira', serif;
+  /* --color-bg: linear-gradient(180deg, #faf7dd 0%, #fff6c5 100%); */
+  --color-bg: #f8a542;
 
   /* Controls the blob blur gradient colors within the main tag's svg */
-  --top-right-blur-1: #fcf2b7;
+  /* --top-right-blur-1: #fcf2b7;
   --top-right-blur-2: #095185;
   --bttm-left-blur-1: #f8a542;
-  --bttm-left-blur-2: #fff9c5;
+  --bttm-left-blur-2: #fff9c5; */
 }
 
 html {
@@ -35,7 +38,7 @@ html {
 }
 
 h1 {
-  color: #fff;
+  color: var(--color-text);
   font-family: var(--main-family);
   padding-top: 5%;
   margin: 0;
