--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -25,8 +25,8 @@ const { title } = Astro.props as Props;
   :root {
     --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
     --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-    --font-size-xl: clamp(2.44rem, 2.38vw + 3.85rem, 6.75rem);
-    --color-text: hsl(0, 0%, 0%);
+    --font-size-xl: clamp(2.44rem, 2.38vw + 6.85rem, 8.75rem);
+    --color-text: #ffe174;
     /* --color-bg: hsl(10, 21%, 95%); */
   }
   html {
