--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Della+Respira&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 :root {
   /* --main-family: 'Archivo Black', sans-serif; */
   /* --main-family: 'Archivo Black', sans-serif; */
-  --main-family: 'Della Respira', serif;
+  /* --main-family: 'Della Respira', serif; */
+  /* --main-family: 'Alfa Slab One', serif; */
+  --main-family: 'Righteous', serif;
   /* --color-bg: linear-gradient(180deg, #faf7dd 0%, #fff6c5 100%); */
-  --color-bg: #f8a542;
+  --color-bg: #ffc800;
 
   /* Controls the blob blur gradient colors within the main tag's svg */
   /* --top-right-blur-1: #fcf2b7;
@@ -40,6 +42,9 @@ html {
 h1 {
   color: var(--color-text);
   font-family: var(--main-family);
+  font-weight: normal;
+  letter-spacing: -0.03em;
+  line-height: 0.75;
   padding-top: 5%;
   margin: 0;
 }
