--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -14,6 +14,13 @@ const { title } = Astro.props as Props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>{title}</title>
   </head>
   <body>
@@ -30,7 +37,7 @@ const { title } = Astro.props as Props;
     /* --color-bg: hsl(10, 21%, 95%); */
   }
   html {
-    font-family: system-ui, sans-serif;
+    font-family: "PT Sans Narrow", system-ui, sans-serif;
     font-size: var(--font-size-base);
     color: var(--color-text);
     background-color: var(--color-bg);
