--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -14,13 +14,16 @@ const { title } = Astro.props as Props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      data-domain="barbrands.com"
+      src="https://plausible.io/js/script.js"></script>
     <title>{title}</title>
   </head>
   <body>
