--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -57,6 +57,8 @@ img {
   color: #7db0ac;
   display: block;
   font-size: clamp(0.6rem, 0.34vw + 0.91rem, 0.85rem);
+  font-weight: 700;
+  ;
   line-height: 1;
   margin: 0 auto;
   position: absolute;
