--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../components/Layout.astro";
 ---
 
-<Layout title="B-A-R Brands">
+<Layout title="B-A-R Brands" metaDescription="Bartenders. Artists. Renegades.">
   <main>
     <div id="content">
       <img src="b-a-r-mark.svg" alt="B-A-R Brands" />
