--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -6,6 +6,7 @@ export interface Props {
 }
 
 const { title } = Astro.props as Props;
+const { metaDescription } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -13,6 +14,7 @@ const { title } = Astro.props as Props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content={metaDescription} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
