--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "../components/Layout.astro";
 <Layout title="B-A-R Brands" metaDescription="Bartenders. Artists. Renegades.">
   <main>
     <div id="content">
+      <h1>B-A-R Brands - Bartenders. Artists. Renegades.</h1>
       <img src="b-a-r-mark.svg" alt="B-A-R Brands" />
     </div>
     <p class="legal">&copy;2023 B-A-R Brands</p>
