--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -50,9 +50,9 @@ const { metaDescription } = Astro.props;
   body {
     margin: 0;
   }
-  :global(h1) {
+  /* :global(h1) {
     font-size: var(--font-size-xl);
-  }
+  } */
   :global(h2) {
     font-size: var(--font-size-lg);
   }
