--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../components/Layout.astro";
   <main>
     <div id="content">
       <h1>B-A-R Brands - Bartenders. Artists. Renegades.</h1>
-      <img src="b-a-r-mark.svg" alt="B-A-R Brands" />
+      <img src="b-a-r-mark_03.svg" alt="B-A-R Brands logo" />
     </div>
     <p class="legal">&copy;2023 B-A-R Brands</p>
   </main>
